--- a/roles/infra/vars/main.yml
+++ b/roles/infra/vars/main.yml
@@ -4,21 +4,21 @@ BACKUP_REMOTE_USER: "freebox"
 BACKUP_REMOTE_PATH: "Disque dur/backups"
 
 TRAEFIK_VERSION: "2.2.0"
-TRAEFIK_FRONT_PORT: 8000
+TRAEFIK_FRONT_PORT: "8000"
 TRAEFIK_EXPOSITION: "false"
 TRAEFIK_EXTERNAL_URL: "traefik.{{ DOMAIN_NAME }}"
 
-NGINX_VERSION: "1.17.9"
-NGINX_FRONT_PORT: 8001
+NGINX_VERSION: "1.19.0"
+NGINX_FRONT_PORT: "8001"
 NGINX_EXPOSITION: "false"
 NGINX_EXTERNAL_URL: "home.{{ DOMAIN_NAME }}"
 
-PORTAINER_VERSION: "1.23.2"
-PORTAINER_PORT: 8010
+PORTAINER_VERSION: "1.24.0"
+PORTAINER_PORT: "8010"
 PORTAINER_EXPOSITION: "false"
 PORTAINER_EXTERNAL_URL: "portainer.{{ DOMAIN_NAME }}"
 
-NETDATA_VERSION: "v1.20.0"
-NETDATA_PORT: 8011
+NETDATA_VERSION: "v1.23.0"
+NETDATA_PORT: "8011"
 NETDATA_EXPOSITION: "false"
 NETDATA_EXTERNAL_URL: "monitor.{{ DOMAIN_NAME }}"
