--- a/roles/infra_ci/vars/main.yml
+++ b/roles/infra_ci/vars/main.yml
@@ -1,5 +1,5 @@
 GOGS_VERSION: "0.11.91"
-GOGS_FRONT_PORT: 8021
+GOGS_FRONT_PORT: "8021"
 GOGS_SSH_PORT: "{{ GIT_SSH_PORT }}"
 GOGS_EXPOSITION: "false"
 GOGS_EXTERNAL_URL: "git.{{ DOMAIN_NAME }}"
@@ -7,7 +7,7 @@ GOGS_EXTERNAL_URL: "git.{{ DOMAIN_NAME }}"
 # Use https://updates.jenkins-ci.org/download/war/ to get the version package checksum
 JENKINS_VERSION: "2.228"
 JENKINS_SHA_256: "1e2114b82b1b76764a1c4c02817b39b0a53a86e798f6071d6a9676944baabc4b"
-JENKINS_PORT: 8023
+JENKINS_PORT: "8023"
 JENKINS_EXPOSITION: "false"
 JENKINS_EXTERNAL_URL: "ci.{{ DOMAIN_NAME }}"
 JENKINS_VALIDATE_PLUGIN_CERTS: false
@@ -21,6 +21,6 @@ REDMINE_DB_VERSION: "10-alpine"
 REDMINE_DB_USER: "redmine_user"
 REDMINE_DB_PASS: "redmine_pass"
 REDMINE_DB_NAME: "redmine"
-REDMINE_FRONT_PORT: 8024
+REDMINE_FRONT_PORT: "8024"
 REDMINE_EXPOSITION: "false"
 REDMINE_EXTERNAL_URL: "redmine.{{ DOMAIN_NAME }}"
