--- a/roles/infra_hard/tasks/setup_octoprint.yml
+++ b/roles/infra_hard/tasks/setup_octoprint.yml
@@ -13,6 +13,7 @@
     state: started
     restart_policy: always
     recreate: yes
+    timeout: "{{ DOCKER_TIMEOUT }}"
     ports:
       - "{{ OCTOPRINT_PORT }}:5000"
     devices:
