--- a/roles/infra_storage/vars/main.yml
+++ b/roles/infra_storage/vars/main.yml
@@ -1,27 +1,27 @@
 NEXUS_VERSION: "3.19.1-01"
 NEXUS_SHA: "7a2e62848abeb047c99e114b3613d29b4afbd635b03a19842efdcd6b6cb95f4e"
-NEXUS_PORT: 8050
-NEXUS_DOCKER_PULL_PORT: 8051
-NEXUS_DOCKER_PUSH_PORT: 8052
+NEXUS_PORT: "8050"
+NEXUS_DOCKER_PULL_PORT: "8051"
+NEXUS_DOCKER_PUSH_PORT: "8052"
 NEXUS_EXPOSITION: "false"
 NEXUS_EXTERNAL_URL: "nexus.{{ DOMAIN_NAME }}"
 NEXUS_RESTART_DELAY: 40
 
 FDROID_VERSION: "0.5"
-FDROID_PORT: 8053
-FDROID_SSH_PORT: 8054
+FDROID_PORT: "8053"
+FDROID_SSH_PORT: "8054"
 FDROID_EXPOSITION: "false"
 FDROID_EXTERNAL_URL: "fdroid.{{ DOMAIN_NAME }}"
 FDROID_URL_IN_CONFIG: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}"
 
-NEXTCLOUD_VERSION: "18.0.3"
-NEXTCLOUD_PORT: 8055
+NEXTCLOUD_VERSION: "19.0.0"
+NEXTCLOUD_PORT: "8055"
 NEXTCLOUD_EXPOSITION: "false"
 NEXTCLOUD_EXTERNAL_URL: "drive.{{ DOMAIN_NAME }}"
 NEXTCLOUD_URL_IN_CONFIG: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}"
 
 ODOO_VERSION: "12.0"
-ODOO_PORT: 8056
+ODOO_PORT: "8056"
 ODOO_EXPOSITION: "false"
 ODOO_EXTERNAL_URL: "erp.{{ DOMAIN_NAME }}"
 ODOO_URL_IN_CONFIG: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}"
