--- a/roles/common/tasks/setup_host_dependencies.yml
+++ b/roles/common/tasks/setup_host_dependencies.yml
@@ -16,30 +16,4 @@
 - name: "Install pip packages"
   pip:
     name: [docker-py, passlib, setuptools]
-
-- name: "Install docker"
-  shell: curl -sSL https://get.docker.com | sh
-  when: '"docker-ce" not in ansible_facts.packages'
-
-- name: "Ensure aliases are present in users profile"
-  lineinfile:
-    path: '/etc/environment'
-    line: "{{ item }}"
-  loop:
-    - "COMPOSE_HTTP_TIMEOUT=6000"
-    - "DOCKER_CLIENT_TIMEOUT=6000"
-
-- name: "Ensure docker service exec command is correct"
-  ini_file:
-    path: "/lib/systemd/system/docker.service"
-    section: Service
-    option: ExecStart
-    value: "/usr/bin/dockerd --icc -H unix://"
-  register: docker_config_update
-
-- name: Reload and restart service docker
-  service:
-    name: docker
-    state: restarted
-    daemon_reload : yes
-  when: docker_config_update.changed
+    state: forcereinstall
