--- a/roles/infra/tasks/setup_homepage.yml
+++ b/roles/infra/tasks/setup_homepage.yml
@@ -24,6 +24,7 @@
     state: started
     restart_policy: always
     recreate: yes
+    timeout: "{{ DOCKER_TIMEOUT }}"
     ports:
       - "{{ NGINX_FRONT_PORT }}:80"
     labels:
