--- a/roles/infra/tasks/setup_https.yml
+++ b/roles/infra/tasks/setup_https.yml
@@ -22,6 +22,7 @@
     state: started
     restart_policy: always
     recreate: yes
+    timeout: "{{ DOCKER_TIMEOUT }}"
     ports:
       - "80:80"
       - "443:443"
@@ -47,6 +48,7 @@
     state: started
     restart_policy: always
     recreate: yes
+    timeout: "{{ DOCKER_TIMEOUT }}"
     ports:
       - "80:80"
       - "443:443"
@@ -72,6 +74,7 @@
     state: started
     restart_policy: always
     recreate: yes
+    timeout: "{{ DOCKER_TIMEOUT }}"
     ports:
       - "80:80"
       - "443:443"
