--- a/roles/infra_hard/vars/main.yml
+++ b/roles/infra_hard/vars/main.yml
@@ -1,24 +1,24 @@
-MQTT_VERSION: "1.6.9"
-MQTT_FRONT_PORT: 8030
+MQTT_VERSION: "1.6.10"
+MQTT_FRONT_PORT: "8030"
 MQTT_EXTERNAL_URL: "mqtt.{{ DOMAIN_NAME }}"
 MQTT_EXPOSITION: "false"
 MQTT_READ_USER: "reader"
 MQTT_RW_USER: "writer"
 
-NODERED_VERSION: "1.0.4-10"
-NODERED_FRONT_PORT: 8031
+NODERED_VERSION: "1.1.2-10"
+NODERED_FRONT_PORT: "8031"
 NODERED_EXTERNAL_URL: "flows.{{ DOMAIN_NAME }}"
 NODERED_EXPOSITION: "false"
 
 OCTOPRINT_VERSION: "latest"
-OCTOPRINT_PORT: 8033
+OCTOPRINT_PORT: "8033"
 OCTOPRINT_EXTERNAL_URL: "printers.{{ DOMAIN_NAME }}"
 OCTOPRINT_EXPOSITION: "false"
 OCTOPRINT_DEVICE_0: "/dev/null"
 OCTOPRINT_DEVICE_1: "/dev/null"
 
 INSOLANTE_VERSION: "1.1.0-beta"
-INSOLANTE_PORT: 8032
+INSOLANTE_PORT: "8032"
 INSOLANTE_URL: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}"
 INSOLANTE_EXTERNAL_URL: "pcb.{{ DOMAIN_NAME }}"
 INSOLANTE_EXPOSITION: "false"
