--- a/roles/infra_social/tasks/setup_peertube.yml
+++ b/roles/infra_social/tasks/setup_peertube.yml
@@ -13,6 +13,7 @@
     state: started
     restart_policy: always
     recreate: yes
+    timeout: "{{ DOCKER_TIMEOUT }}"
     env:
       POSTGRES_USER: "{{ PEERTUBE_DB_USER }}"
       POSTGRES_PASSWORD: "{{ PEERTUBE_DB_PASS }}"
@@ -29,6 +30,7 @@
     state: started
     restart_policy: always
     recreate: yes
+    timeout: "{{ DOCKER_TIMEOUT }}"
     volumes:
       - '/{{ DATACORE }}/peertube/redis:/data'
     labels:
@@ -41,6 +43,7 @@
     state: started
     restart_policy: always
     recreate: yes
+    timeout: "{{ DOCKER_TIMEOUT }}"
     ports:
       - "{{ PEERTUBE_PORT }}:9000"
     links:
@@ -89,6 +92,7 @@
     state: started
     restart_policy: always
     recreate: yes
+    timeout: "{{ DOCKER_TIMEOUT }}"
     ports:
       - "{{ PEERTUBE_PORT }}:9000"
     links:
