--- a/roles/infra_storage/tasks/setup_odoo.yml
+++ b/roles/infra_storage/tasks/setup_odoo.yml
@@ -18,8 +18,9 @@
     state: started
     restart_policy: always
     recreate: yes
+    timeout: "{{ DOCKER_TIMEOUT }}"
     env:
-      POSTGRES_DB: postgres
+      POSTGRES_DB: "postgres"
       POSTGRES_USER: "{{ ODOO_DB_USER }}"
       POSTGRES_PASSWORD: "{{ ODOO_DB_PASS }}"
     volumes:
@@ -34,6 +35,7 @@
     state: started
     restart_policy: always
     recreate: yes
+    timeout: "{{ DOCKER_TIMEOUT }}"
     ports:
       - "{{ ODOO_PORT }}:8069"
     links:
