--- a/roles/infra/tasks/main.yml
+++ b/roles/infra/tasks/main.yml
@@ -1,14 +1,8 @@
 ---
-- import_tasks: setup_homepage.yml
-
 - import_tasks: setup_backup.yml
-  when: ("vault" in FEATURES) and (BACKUP_MODE != "")
+  when: (BACKUP_MODE != "")
 
+- import_tasks: setup_homepage.yml
 - import_tasks: setup_https.yml
-  when: ("https" in FEATURES) and (DOMAIN_NAME != "")
-
 - import_tasks: setup_portainer.yml
-  when: ("portainer" in FEATURES)
-
 - import_tasks: setup_netdata.yml
-  when: ("netdata" in FEATURES)
