--- a/roles/infra_storage/tasks/main.yml
+++ b/roles/infra_storage/tasks/main.yml
@@ -1,12 +1,12 @@
 ---
 - import_tasks: setup_fdroid.yml
-  when: ("fdroid" in FEATURES)
+  when: ("fdroid" not in SKIP_SERVICES)
 
 - import_tasks: setup_nexus.yml
-  when: ("nexus" in FEATURES) and ("vault" in FEATURES) and ansible_architecture in ["aarch64", "amd64", "x86_64"]
+  when: ("nexus" not in SKIP_SERVICES) and ansible_architecture in ["aarch64", "amd64", "x86_64"]
 
 - import_tasks: setup_nextcloud.yml
-  when: ("nextcloud" in FEATURES) and ansible_architecture in ["aarch64", "amd64", "x86_64"]
+  when: ("nextcloud" not in SKIP_SERVICES) and ansible_architecture in ["aarch64", "amd64", "x86_64"]
 
 - import_tasks: setup_odoo.yml
-  when: ("vault" in FEATURES) and ("erp" in FEATURES) and ansible_architecture in ["amd64", "x86_64"]
+  when: ("erp" not in SKIP_SERVICES) and ansible_architecture in ["amd64", "x86_64"]
