--- a/roles/infra_social/tasks/setup_mstream.yml
+++ b/roles/infra_social/tasks/setup_mstream.yml
@@ -14,7 +14,7 @@
   docker_container:
     name: "mstream"
     image: "linuxserver/mstream:arm32v7-{{ MSTREAM_VERSION }}"
-    state: started
+    state: "{{ MSTREAM_DEFAULT_STATE }}"
     restart_policy: always
     recreate: yes
     timeout: "{{ DOCKER_TIMEOUT }}"
@@ -46,7 +46,7 @@
   docker_container:
     name: "mstream"
     image: "linuxserver/mstream:amd64-{{ MSTREAM_VERSION }}"
-    state: started
+    state: "{{ MSTREAM_DEFAULT_STATE }}"
     restart_policy: always
     recreate: yes
     timeout: "{{ DOCKER_TIMEOUT }}"
