--- a/roles/infra_hard/tasks/setup_mqtt.yml
+++ b/roles/infra_hard/tasks/setup_mqtt.yml
@@ -26,7 +26,7 @@
   docker_container:
     name: "mqtt"
     image: "eclipse-mosquitto:{{ MQTT_VERSION }}"
-    state: started
+    state: "{{ MQTT_DEFAULT_STATE }}"
     restart_policy: always
     recreate: yes
     timeout: "{{ DOCKER_TIMEOUT }}"
