--- a/roles/infra_social/vars/main.yml
+++ b/roles/infra_social/vars/main.yml
@@ -3,6 +3,7 @@ WORDPRESS_DB_VERSION: "10.4.10"
 WORDPRESS_FRONT_PORT: "8040"
 WORDPRESS_EXPOSITION: "false"
 WORDPRESS_EXTERNAL_URL: "blog.{{ DOMAIN_NAME }}"
+WORDPRESS_DEFAULT_STATE: stopped
 
 PEERTUBE_VERSION: "v1.4.0-stretch"
 PEERTUBE_PORT: "8041"
@@ -12,9 +13,11 @@ PEERTUBE_EXPOSITION: "false"
 PEERTUBE_IS_HTTPS: "false"
 PEERTUBE_TMP_PATH: "/tmp/peertube"
 PEERTUBE_DB_USER: "peertube"
+PEERTUBE_DEFAULT_STATE: stopped
 
 MSTREAM_VERSION: "v4.7.0-ls24"
 MSTREAM_PORT: "8042"
 MSTREAM_URL: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}"
 MSTREAM_EXTERNAL_URL: "music.{{ DOMAIN_NAME }}"
 MSTREAM_EXPOSITION: "false"
+MSTREAM_DEFAULT_STATE: stopped
