--- a/roles/infra/vars/main.yml
+++ b/roles/infra/vars/main.yml
@@ -22,3 +22,4 @@ NETDATA_VERSION: "v1.23.0"
 NETDATA_PORT: "8011"
 NETDATA_EXPOSITION: "false"
 NETDATA_EXTERNAL_URL: "monitor.{{ DOMAIN_NAME }}"
+NETDATA_DEFAULT_STATE: stopped
